import React from 'react';
import { render } from '../../utils/test-utils';
import Alert from '../index';

describe('<Alert />', () => {
  test('should render in dom', () => {
    const { container } = render(<Alert>default</Alert>);
    expect(container).toBeInTheDocument();
    const kinds: any[] = ['info', 'warning', 'positive', 'negative'];
    const { getByText } = render(
      <>
        {kinds.map((k) => (
          <Alert kind={k} key={k}>
            {k}
          </Alert>
        ))}
      </>,
    );
    kinds.forEach((k) => {
      expect(getByText(k)).toBeInTheDocument();
    });
  });

  test('should render default', () => {
    const { container } = render(<Alert>default</Alert>);
    expect(container).toMatchSnapshot();
    const kinds: any[] = ['info', 'warning', 'positive', 'negative'];
    const { getByText } = render(
      <>
        {kinds.map((k) => (
          <Alert kind={k} key={k}>
            {k}
          </Alert>
        ))}
      </>,
    );
    kinds.forEach((k) => {
      expect(getByText(k)).toMatchSnapshot();
    });
  });
});
